fix(modal): fix alignment issues when button is hidden

--- a/front-end/src/components/Modal/Modal.css
+++ b/front-end/src/components/Modal/Modal.css
@@ -3,7 +3,7 @@
   width: min(300px, 100%);
   top: 50px;
   margin: 0 auto;
-  z-index: 3;
+  z-index: 5;
   border-radius: 15px;
   background-color: var(--clr-background);
   padding: 65px 40px;
@@ -24,6 +24,7 @@
 
 .modal__open-button {
   visibility: hidden;
+  display: none;
 }
 
 .modal__button {
@@ -56,6 +57,7 @@
   }
 
   .modal__open-button {
+    display: block;
     position: fixed;
     bottom: 100px;
     right: 25px;
